--- a/src/MathFlow/appsettings.json
+++ b/src/MathFlow/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Otlp": {
+    "Endpoint": "http://localhost:4317"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=mathflow_db;Username=mathflow;Password=mathflow_password_change_me"
+  }
 }
