feat: Adiciona Makefile, README e comando docker-up-all (Task 6.0)
- Cria Makefile completo com 12 comandos + 4 aliases
- Adiciona comando docker-up-all para iniciar stack completa (infra + metrics + app)
- Adiciona comando docker-down-all para parar toda a stack
- Cria README.md com documentação completa (350+ linhas)
- Corrige paths relativos nos docker-compose files
- Adiciona completion summary da tarefa 6.0
- Atualiza status da tarefa para completed
- Testes E2E executados com sucesso (100% pass rate)

Comandos disponíveis:
- make help: Exibe todos os comandos
- make docker-up-all: Sobe TUDO (infra + metrics + app)
- make docker-down-all: Para TUDO
- make build/run/test/clean: Comandos de desenvolvimento
- make docker-logs/restart: Gerenciamento de containers

Serviços acessíveis:
- Aplicação: http://localhost:5124
- Grafana: http://localhost:3000
- Prometheus: http://localhost:9090
- Loki: http://localhost:3100

Task 6.0 - Makefile + README + E2E Tests: COMPLETED ✅

--- a/docker/local/docker-compose.metrics.yml
+++ b/docker/local/docker-compose.metrics.yml
@@ -4,7 +4,7 @@ services:
     container_name: mathflow-otel-collector
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
-      - ./docker/infra/otel/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+      - ../../docker/infra/otel/otel-collector-config.yaml:/etc/otel-collector-config.yaml
     ports:
       - "4317:4317"   # OTLP gRPC
       - "4318:4318"   # OTLP HTTP
@@ -15,7 +15,7 @@ services:
 
   loki:
     build:
-      context: ./docker/infra/loki
+      context: ../../docker/infra/loki
       dockerfile: Dockerfile
     container_name: mathflow-loki
     ports:
@@ -27,7 +27,7 @@ services:
 
   prometheus:
     build:
-      context: ./docker/infra/prometheus
+      context: ../../docker/infra/prometheus
       dockerfile: Dockerfile
     container_name: mathflow-prometheus
     ports:
@@ -39,7 +39,7 @@ services:
 
   grafana:
     build:
-      context: ./docker/infra/grafana
+      context: ../../docker/infra/grafana
       dockerfile: Dockerfile
     container_name: mathflow-grafana
     ports:
