--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build:
-      context: .
+      context: ../../
       dockerfile: docker/app/Dockerfile
     container_name: mathflow-app
     ports:
