--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 # dotenv files
 .env
 
+# ASP.NET Core environment-specific settings
+appsettings.Development.json
+
 # Node dependencies
 **/node_modules/
 **/package-lock.json
